<resources>
    <string name="app_name">Inventario seguro</string>
    <string name="Titulo1_1">Inventario <br /> Seguro</string>
    <string name="Pregunta1">¿No tienes cuenta?</string>
    <string name="Pregunta2">Creala Aquí</string>
    <string name="BttnA1">Iniciar Sesión</string>
    <string name="Name">Nombre</string>
    <string name="email">Correo</string>
    <string name="Password">Ingrese Contraseña</string>
    <string name="Valid_Password">Repita Contraseña</string>
    <string name="Sign_in">Resistrarse</string>
    <string name="SingUp">Ingresar</string>
    <string name="title_activity_panelt">Panelt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="confi">Configuración</string>
    <string name="equipo">Equipo</string>
    <string name="gps">GPS</string>
    <string name="chat">Chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Nick">Usuario</string>
    <string name="NameEquipament">Nombre equipo</string>
    <string name="Cant">Cantidad</string>
    <string name="Description">Descripción</string>
    <string name="Value">Precio</string>
    <string name="Title_equipament">Listado de Equipos</string>
    <string name="CreateEquipament">Crear equipo</string>
    <string name="CantEquip">Cantidad</string>
    <string name="DescriptionEquip">Descripción Equipo</string>
    <string name="NameEquip">Nombre equipo</string>
    <string name="Bttn_UpDate">Actualizar Equipo </string>
    <string name="Bttn_Delete">Eliminar Equipo </string>
    <string name="BackEquip">Volver a Equipos</string>
    <string name="UpDate_Delete">Eliminar o<br /> Actualizar equipos</string>
<<<<<<< HEAD
    <string name="title_activity_gpsactivity">GPSActivity</string>
=======
>>>>>>> 497d4af9414d2554649982fd8ce894733fa2a1ee
</resources>