<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/inventario"
            android:title="@string/equipo" />
        <item
            android:id="@+id/nav_gps"
            android:icon="@drawable/gps2"
            android:title="@string/gps" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat2"
            android:title="@string/chat" />
    </group>
</menu>