<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/contact_1"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_margin="10dp"
        android:background="@drawable/fondo_tarjetas1"
        android:backgroundTintMode="add"
        android:elevation="20dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Iv_Equip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/fork" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/Tv_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/NameEquipament"
                android:textAlignment="center"
                android:textColor="#FDFCFC"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Tv_Desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Description"
                android:textAlignment="center"
                android:textColor="#FDFCFC"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="27dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:lineSpacingExtra="8sp"
                        android:text="@string/Cant"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="#FDFCFC"
                        android:textSize="20sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="27dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:text="@string/Value"
                        android:textColor="#FDFCFC"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Tv_Cant"
                        android:layout_width="match_parent"
                        android:layout_height="27dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="TextView"
                        android:textAlignment="center"
                        android:textColor="#FDFCFC"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/Tv_Precio"
                        android:layout_width="match_parent"
                        android:layout_height="27dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:padding="5dp"
                        android:text="$ 50.000"
                        android:textAlignment="center"
                        android:textColor="#FDFCFC"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>